sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value value
    while( j > 0 & (isSmallerThan(j - 1,value))){
                                        ^